# ckanext-zurich

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/zurich/: plugin.py
ckanext/zurich/assets/: script.js  webassets.yml
ckanext/zurich/logic/: action.py
ckanext/zurich/tests/: test_plugin.py
